--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - setup_remote_docker
       - checkout
-      - run: docker build - < ./Dockerfile
+      - run: docker build .
       - heroku/install
       - run: heroku container:login
       - heroku/push-docker-image:
