--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - checkout
       - run: docker build .
       - heroku/install
-      - run: heroku container:login
+      - run: docker login --username=_ --password=$HEROKU_TOKEN registry.heroku.com
       - heroku/push-docker-image:
           app-name: gozealous
           process-types: web
