--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,8 @@ workflows:
     jobs:
       - test
       - deploy
+          requires:
+            - test
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
@@ -23,10 +25,10 @@ jobs:
       - checkout
       - run: 
           name: Install Dependencies
-          command: go get ./..
+          command: go get ./...
       - run:
           name: Run tests
-          command: go test -v ./.. 
+          command: go test -v ./... 
   deploy:
     description: Build and Deploy Docker Image
     docker:
