--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - checkout
       - run: 
           name: Install Dependencies
-          command: go get ./...
+          command: go mod download
       - run:
           name: Run tests
           command: go test -v ./... 
