--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,9 +28,9 @@ jobs:
           command: go mod download
       - run:
           name: Run tests
-          command: gotestsum --junitfile test-result.xml
+          command: gotestsum --junitfile test-result.xml $(go list ./... | circleci tests split)
       - store_test_results:
-          path: $CIRCLE_WORKING_DIRECTORY
+          path: ./
   deploy:
     description: Build and Deploy Docker Image
     docker:
