--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,17 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
 orbs: 
   heroku: circleci/heroku@1.2.6
 
 # Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   release-workflow:
     jobs:
       - test
-      # - deploy:
-      #     requires:
-      #       - test
+      - deploy:
+          requires:
+            - test
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   test:
     docker:
@@ -38,9 +33,13 @@ jobs:
     steps:
       - setup_remote_docker
       - checkout
-      - run: docker build .
+      - run: 
+          name: Build Docker image
+          command: docker build .
       - heroku/install
-      - run: heroku container:login
+      - run:
+          name: Login to Heroku Container
+          command: heroku container:login
       - heroku/push-docker-image:
           app-name: gozealous
           process-types: web
