--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ workflows:
 jobs:
   test:
     docker:
-      - image: circleci/golang:1.17
+      - image: cimg/go:1.17
     parallelism: 4
     steps:
       - checkout
